# django-choosemusic

./: MANIFEST.in  README.md  README.rst  setup.cfg
choosemusic/: admin.py  apps.py  models.py  urls.py  views.py
choosemusic/migrations/: 0001_initial.py  0002_auto_20200229_2355.py
choosemusic/static/choosemusic/css/: home.css  playlist.css  suggestions.css
choosemusic/templates/: 400.html  403.html  404.html  500.html
choosemusic/templates/choosemusic/: home.html  login.html  play.html  playlist.html  suggest.html  suggestions.html
